fix: remove max-height on vizz grid so right column is not truncated

--- a/src/stylesheets/vizz.css
+++ b/src/stylesheets/vizz.css
@@ -11,7 +11,6 @@
 .grid-style {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  max-height: 250px;
   min-width: 0;
   max-width: 100%;
   margin-top: 1em;
